usr/src/cmd/mdb/common/mdb/mdb_errno.h
@@ -113,7 +113,8 @@ enum {
 	EMDB_WPTOOMANY,				/* Too many watchpoints */
 	EMDB_DTACTIVE,				/* DTrace is active */
 	EMDB_KMODNOUNLOAD,			/* module can't be unloaded */
-	EMDB_STKFRAME				/* Bad stack frame pointer */
+	EMDB_STKFRAME,				/* Bad stack frame pointer */
+	EMDB_SHORTWRITE				/* unexpected short write */
 };
 
 #endif /* _MDB */
